[tool.poetry]
name = "ciptools"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Core libraries for CIP."
license = "Apache-2.0"
authors = ["Center for an Informed Public <ciptools@uw.edu>"]
packages = [{include = "ciptools", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
# loosen requests version requirement for airflow
requests = "^2.28"
tenacity = "^8.0.1"

# pinned at this version for airflow
psycopg2-binary = "^2.9.3"

# this should go away with python 3.10. this is used only to read files out of
# packages. when this is removed then references to "importlib_resources" can
# be changed to "importlib.resources".
importlib-resources = "^5.9.0"

# this should go away when everything is updated to python 3.9 when wemove off
# of buster and on to bullseye. when this is removed then references to
# "importlib_metadata" can be changed to "importlib.metadata".
# pinned at this version for airflow
importlib-metadata = "^4.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-flake8 = "^1.1.1"
flake8-builtins = "^1.5.3"
flake8-bugbear = "^22.7.1"
flake8-comprehensions = "^3.10.0"
flake8-isort = "^4.1.1"
pep8-naming = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--flake8 -p no:warnings --log-level=ERROR"

[[tool.poetry.source]]
name = "uwcip"
url = "https://uwcip.github.io/pypi/simple/"
